Suma de mesures

--- a/Alta Article/inici.html
+++ b/Alta Article/inici.html
@@ -15,7 +15,7 @@
         <input type="text" name="tamany" value=""/></input><br>
         <input type="text" name="tamany" value=""/></input><br>
         <input type="text" name="tamany" value=""/></input><br>
-        <p name="tamanyTotal"></p>
+        <p2 name="amplada"></p2> x <p2 name="llargada"></p2> x <p2 name="altura"></p2>
 
     </body>
 </html>
