joinSize() finished, checkPassadis() finished.

--- a/Alta Article/inici.html
+++ b/Alta Article/inici.html
@@ -15,7 +15,12 @@
         <input type="text" name="tamany" value=""/></input><br>
         <input type="text" name="tamany" value=""/></input><br>
         <input type="text" name="tamany" value=""/></input><br>
-        <p2 name="amplada"></p2> x <p2 name="llargada"></p2> x <p2 name="altura"></p2>
+        <p2 name="amplada"></p2> x <p2 name="llargada"></p2> x <p2 name="altura"></p2><br>
+
+        Ubicació: <br> 
+        <input type="text" name="ubicacio" value=""/></input><p1 name="check"></p1><br>
+        <input type="text" name="ubicacio" value=""/></input><p1 name="check"></p1><br>
+        <input type="text" name="ubicacio" value=""/></input><p1 name="check"></p1><br>
 
     </body>
 </html>
