--- a/Alta Article/inici.html
+++ b/Alta Article/inici.html
@@ -21,6 +21,8 @@
         <input type="text" name="ubicacio" value=""/></input><p1 name="check"></p1><br>
         <input type="text" name="ubicacio" value=""/></input><p1 name="check"></p1><br>
         <input type="text" name="ubicacio" value=""/></input><p1 name="check"></p1><br>
+        <button type="submit" name="submit">Donar d'Alta</button>
+        <div name="results"></div>
 
     </body>
 </html>
